# Chunkup

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  GPU_WORLD_GEN.md  PERFORMANCE_ANALYSIS.md  PHASE1_ACCEPTANCE.md  PHASE2_BENCHMARK.md
engine/: Cargo.toml  probe_cuda.rs
engine/chunkup-core/: Cargo.toml  build.rs
engine/chunkup-core/src/: lib.rs  sl_log.rs  stats.rs
engine/chunkup-core/src/backend/: cpu.rs  cuda.rs  gpu_loader.rs  mod.rs  opencl.rs  scheduler.rs
engine/chunkup-core/src/compression/: mod.rs
engine/chunkup-core/src/culling/: mod.rs
engine/chunkup-core/src/ffi/: mod.rs
engine/chunkup-core/src/io/: mod.rs
engine/chunkup-core/src/kernel/: dispatch.rs  mod.rs  types.rs  workspace.rs
engine/chunkup-core/src/lighting/: mod.rs
engine/chunkup-core/src/memory/: mod.rs
engine/chunkup-core/src/noise/: mod.rs
engine/chunkup-core/src/section/: mesh.rs  mesher.rs  mod.rs  occlusion.rs  vertex.rs
engine/chunkup-cpu/: Cargo.toml
engine/chunkup-cpu/src/: lib.rs
native/common/: chunkup_batch.h  chunkup_batch_density_host.c  chunkup_batch_host.c  chunkup_cell_fill.h  chunkup_compat.h  chunkup_cuda_host.h  chunkup_density_router.h  chunkup_export.h  chunkup_factor_eval.h  chunkup_improved_noise.h  chunkup_infection_batch.h  chunkup_kernel.h  chunkup_kernel_algo.h  chunkup_kernel_host.c  chunkup_noise_bundle.h  chunkup_noise_state.c  chunkup_noise_state.h  chunkup_normal_noise.h  chunkup_overworld_density.h  chunkup_overworld_router.h  chunkup_sl_log.c  chunkup_sl_log.h  chunkup_spline.h  chunkup_surface.h
native/cuda/: CMakeLists.txt
native/cuda/include/: chunkup_cuda.h
native/cuda/src/: chunkup_cuda.cu  chunkup_cuda_host.c
native/opencl/: CMakeLists.txt
native/opencl/include/: chunkup_opencl.h
native/opencl/kernels/: chunkup_kernel.cl  chunkup_router_codegen.clh
native/opencl/src/: chunkup_opencl.cpp
scripts/: build-engine.ps1  build-engine.sh  build-settings.ps1  codegen-factor-spline.py  codegen-opencl-router.py  extract-overworld-router.py  install-deps-linux.sh
settings/: CMakeLists.txt  README.md
settings/include/: chunkup_settings_api.h
settings/src/: ConfigManager.cpp  ConfigManager.h  MainWindow.cpp  MainWindow.h  SettingsHost.cpp  chunkup_settings_jni.cpp
src/client/java/cn/sanrolnet/chunkup/client/mixin/: ChunkupClientMixinPlugin.java  DebugScreenOverlayMixin.java
src/client/java/cn/sanrolnet/chunkup/client/mixin/sodium/: ChunkBuilderMeshingTaskAccess.java  ChunkBuilderMeshingTaskMixin.java  ChunkBuilderTaskAccessor.java  RenderSectionManagerAccess.java  RenderSectionManagerMixin.java  VisibleChunkCollectorMixin.java
src/client/java/cn/sanrolnet/chunkup/client/sodium/: ChunkupSectionMesher.java  OcclusionBridge.java  SectionBlockStateEncoder.java  SodiumBuildFactory.java  SodiumNativeBuffers.java  SodiumVertexRanges.java
src/client/kotlin/cn/sanrolnet/chunkup/client/: ChunkupClient.kt  ChunkupDataGenerator.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/bridge/: ClientEngineBridge.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/debug/: ChunkupF3Debug.kt  ChunkupPerformanceHud.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/infection/: InfectionBatchPackager.kt  InfectionCoordinator.kt  InfectionRenderBootstrap.kt  InfectionState.kt  InfectionZone.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/lod/: LodSectionBridge.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/pipeline/: ClientSectionPipeline.kt  SectionLoadPreRenderer.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/render/: ClientSectionMemory.kt  SectionBuildCache.kt  SectionTypes.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/settings/: ChunkupAdvancedSettingsScreen.kt  ChunkupFabricSettingsScreen.kt  ChunkupModMenuIntegration.kt  ChunkupScrollScreen.kt  ChunkupSettingsKeybind.kt  ChunkupSettingsUi.kt  SettingsNative.kt
src/client/kotlin/cn/sanrolnet/chunkup/client/sodium/: LayeredSectionBootstrap.kt  LayeredSectionPolicy.kt  SectionMeshStats.kt  SodiumIntegration.kt  SodiumSectionScheduler.kt
src/client/resources/: chunkup.client.mixins.json
src/main/java/cn/sanrolnet/chunkup/mixin/generation/: ChunkAccessMixin.java  ChunkGeneratorMixin.java  ChunkMapMixin.java  NoiseBasedChunkGeneratorMixin.java
src/main/kotlin/cn/sanrolnet/chunkup/: Chunkup.kt  ChunkupConfig.kt  ChunkupConfigFile.kt
src/main/kotlin/cn/sanrolnet/chunkup/bridge/: EngineBridge.kt  FfmBridge.kt  JniBridge.kt  NativeLibraryLoader.kt
src/main/kotlin/cn/sanrolnet/chunkup/config/: ChunkupSettingsSnapshot.kt
src/main/kotlin/cn/sanrolnet/chunkup/debug/: ChunkupDebugProbe.kt  ChunkupDebugStats.kt
src/main/kotlin/cn/sanrolnet/chunkup/log/: ChunkupSlLog.kt
src/main/kotlin/cn/sanrolnet/chunkup/minecraft/: ChunkupEvents.kt
src/main/kotlin/cn/sanrolnet/chunkup/minecraft/generation/: ChunkDensityApplier.kt  ChunkDensityBatcher.kt  ChunkDensityCache.kt  ChunkDensityCoords.kt  ChunkDensityFill.kt  ChunkDensityGeneration.kt  ChunkDensityReader.kt  ChunkGenerationContext.kt  ChunkGenerationHooks.kt  ChunkGenerationListener.kt  ChunkGenerationStage.kt  ChunkGenerationWorldContext.kt  ChunkLoadBatcher.kt  ChunkLoadPipeline.kt  ChunkLoadResult.kt  ChunkSkylightApplier.kt  ChunkSurfaceBiomeMapper.kt  ChunkSurfaceGeneration.kt  GpuGenerationCompat.kt
src/main/kotlin/cn/sanrolnet/chunkup/render/: CompactChunkVertexLayout.kt  SectionBuildPayload.kt  SectionKey.kt  SectionKind.kt
src/main/resources/: chunkup.mixins.json  fabric.mod.json
src/main/resources/assets/chunkup/lang/: en_us.json  zh_cn.json
