[workspace]
resolver = "2"
members = [
    "chunkup-core",
    "chunkup-cpu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = "full"
opt-level = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 0
